--- a/app/src/main/res/values-en-rAI/strings.xml
+++ b/app/src/main/res/values-en-rAI/strings.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Olamide\'s Android Lab</string>
-    <string name ="hello_message">Hello Cruel World!</string>
+    <string name="hello_message">Hello Cruel World!</string>
     <string name="button_message">I am a Button</string>
 </resources>
